--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "author": "AndresDFX",
   "main": "app.js",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
@@ -17,23 +18,27 @@
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "joi": "^14.3.1",
+    "joi": "^17.1.1",
     "morgan": "^1.10.0",
-    "pg": "^8.0.0",
+    "pg": "^8.3.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5"
+    "sequelize": "^6.3.3"
   },
   "engines": {
     "node": "12.16.0"
   },
   "devDependencies": {
     "coverage": "^0.4.1",
-    "coveralls": "^3.0.11",
+    "coveralls": "^3.1.0",
     "env-test": "^1.0.0",
     "istanbul": "^0.4.5",
     "minimist": "^1.2.5",
-    "mocha": "^7.1.1",
+    "mocha": "^8.0.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.4",
+    "yargs-parser": "^18.1.3"
+  },
+  "resolutions": {
+    "yargs-parser": "^18.1.3"
   }
 }
